# pytest-capsqlalchemy

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yaml  env.example  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  sonar-project.properties
.github/workflows/: main.yml  notify-pr-closed.yaml  on-release-main.yml
api-reference/: index.html
docs/: api-reference.md  index.md
docs/templates/partials/: logo.html
examples/: test_plugin_setup_with_async_db_engine_fixture.py
pytest_capsqlalchemy/: __init__.py  capturer.py  context.py  expression.py  plugin.py  utils.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_capsqlalchemy_fixture.py  test_capturer.py  test_context.py  test_expression.py  test_plugin.py  test_plugin_usage.py
tests/examples/: test_missing_setup.py
